# root-gpu-decompression

./: BatchData.cuh  CMakeLists.txt  README.md  ROOTBatchData.cuh  cpu_root_decomp.cpp  cpu_root_decomp_omp.cpp  gpu_root_decomp.cu  ll_decomp.cu  pack.cuh  pack_test.cu  root_comp.cpp  root_decomp.cu  test.sh  utils.h
benchmarks/: benchmark.ipynb  benchmark.py  decompress_unpack_stacked_bar.py
input/: CMakeLists.txt  cpu_root_comp.cpp  generate_data.py  visualize_data.py
test/: test.py
